--- a/py/pd/pdAdv.ipynb
+++ b/py/pd/pdAdv.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "20b8edb0-8900-40e0-96c0-e19585cdb402",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "178d729b-b548-497f-8e4f-0e678b93008c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "7a5faf5d-a4fa-4a74-87ea-1ffd8ab2a694",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "Hornet Sportabout     2  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "65071edc-eb65-416b-b779-cddcdcc607d8",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "8c78684a-be83-4b3a-9ec4-d61b6215c66d",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "a9272b33-c7bb-4957-9899-32dc61a67823",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "a21a1b4d-7866-4533-b9a9-1333052e4975",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "10ac0594-f251-4e1e-b10e-779d0db1b5fe",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "ddae7e3e-30de-4361-a1af-7d61c008e275",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "Hornet Sportabout    2  Hornet Sportabout  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "141abf58-1c33-4cde-9a40-5eb212a58e7d",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "0bb8451b-18b0-4f33-8124-0d0e23e9d21d",
    "metadata": {},
    "outputs": [
@@ -605,13 +605,417 @@
        "Lotus Europa      2    Lotus Europa  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mtcars[mtcars['mpg'] > 25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4b45df99-47f4-4a47-a72b-abab6673a5fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>disp</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>drat</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>qsec</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>am</th>\n",
+       "      <th>gear</th>\n",
+       "      <th>carb</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Fiat 128</th>\n",
+       "      <td>32.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78.7</td>\n",
+       "      <td>66</td>\n",
+       "      <td>4.08</td>\n",
+       "      <td>2.200</td>\n",
+       "      <td>19.47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fiat 128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Honda Civic</th>\n",
+       "      <td>30.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>75.7</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4.93</td>\n",
+       "      <td>1.615</td>\n",
+       "      <td>18.52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Honda Civic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toyota Corolla</th>\n",
+       "      <td>33.9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>71.1</td>\n",
+       "      <td>65</td>\n",
+       "      <td>4.22</td>\n",
+       "      <td>1.835</td>\n",
+       "      <td>19.90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Toyota Corolla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiat X1-9</th>\n",
+       "      <td>27.3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>4.08</td>\n",
+       "      <td>1.935</td>\n",
+       "      <td>18.90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fiat X1-9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Porsche 914-2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.3</td>\n",
+       "      <td>91</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>2.140</td>\n",
+       "      <td>16.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Porsche 914-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lotus Europa</th>\n",
+       "      <td>30.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>95.1</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>1.513</td>\n",
+       "      <td>16.90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Lotus Europa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 mpg  cyl   disp   hp  drat     wt   qsec vs      am gear  \\\n",
+       "Fiat 128        32.4    4   78.7   66  4.08  2.200  19.47  1  manual    4   \n",
+       "Honda Civic     30.4    4   75.7   52  4.93  1.615  18.52  1  manual    4   \n",
+       "Toyota Corolla  33.9    4   71.1   65  4.22  1.835  19.90  1  manual    4   \n",
+       "Fiat X1-9       27.3    4   79.0   66  4.08  1.935  18.90  1  manual    4   \n",
+       "Porsche 914-2   26.0    4  120.3   91  4.43  2.140  16.70  0  manual    5   \n",
+       "Lotus Europa    30.4    4   95.1  113  3.77  1.513  16.90  1  manual    5   \n",
+       "\n",
+       "               carb        car_name  \n",
+       "Fiat 128          1        Fiat 128  \n",
+       "Honda Civic       2     Honda Civic  \n",
+       "Toyota Corolla    1  Toyota Corolla  \n",
+       "Fiat X1-9         1       Fiat X1-9  \n",
+       "Porsche 914-2     2   Porsche 914-2  \n",
+       "Lotus Europa      2    Lotus Europa  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtcars.query(\"mpg > 25\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "62298e7b-344c-444a-84da-70ff5b130185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>hp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mazda RX4</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mazda RX4 Wag</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datsun 710</th>\n",
+       "      <td>22.8</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hornet 4 Drive</th>\n",
+       "      <td>21.4</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hornet Sportabout</th>\n",
+       "      <td>18.7</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valiant</th>\n",
+       "      <td>18.1</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Duster 360</th>\n",
+       "      <td>14.3</td>\n",
+       "      <td>245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 240D</th>\n",
+       "      <td>24.4</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 230</th>\n",
+       "      <td>22.8</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 280</th>\n",
+       "      <td>19.2</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 280C</th>\n",
+       "      <td>17.8</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 450SE</th>\n",
+       "      <td>16.4</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 450SL</th>\n",
+       "      <td>17.3</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Merc 450SLC</th>\n",
+       "      <td>15.2</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cadillac Fleetwood</th>\n",
+       "      <td>10.4</td>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lincoln Continental</th>\n",
+       "      <td>10.4</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chrysler Imperial</th>\n",
+       "      <td>14.7</td>\n",
+       "      <td>230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiat 128</th>\n",
+       "      <td>32.4</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Honda Civic</th>\n",
+       "      <td>30.4</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toyota Corolla</th>\n",
+       "      <td>33.9</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toyota Corona</th>\n",
+       "      <td>21.5</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dodge Challenger</th>\n",
+       "      <td>15.5</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMC Javelin</th>\n",
+       "      <td>15.2</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Camaro Z28</th>\n",
+       "      <td>13.3</td>\n",
+       "      <td>245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pontiac Firebird</th>\n",
+       "      <td>19.2</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiat X1-9</th>\n",
+       "      <td>27.3</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Porsche 914-2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lotus Europa</th>\n",
+       "      <td>30.4</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford Pantera L</th>\n",
+       "      <td>15.8</td>\n",
+       "      <td>264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ferrari Dino</th>\n",
+       "      <td>19.7</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maserati Bora</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Volvo 142E</th>\n",
+       "      <td>21.4</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      mpg   hp\n",
+       "Mazda RX4            21.0  110\n",
+       "Mazda RX4 Wag        21.0  110\n",
+       "Datsun 710           22.8   93\n",
+       "Hornet 4 Drive       21.4  110\n",
+       "Hornet Sportabout    18.7  175\n",
+       "Valiant              18.1  105\n",
+       "Duster 360           14.3  245\n",
+       "Merc 240D            24.4   62\n",
+       "Merc 230             22.8   95\n",
+       "Merc 280             19.2  123\n",
+       "Merc 280C            17.8  123\n",
+       "Merc 450SE           16.4  180\n",
+       "Merc 450SL           17.3  180\n",
+       "Merc 450SLC          15.2  180\n",
+       "Cadillac Fleetwood   10.4  205\n",
+       "Lincoln Continental  10.4  215\n",
+       "Chrysler Imperial    14.7  230\n",
+       "Fiat 128             32.4   66\n",
+       "Honda Civic          30.4   52\n",
+       "Toyota Corolla       33.9   65\n",
+       "Toyota Corona        21.5   97\n",
+       "Dodge Challenger     15.5  150\n",
+       "AMC Javelin          15.2  150\n",
+       "Camaro Z28           13.3  245\n",
+       "Pontiac Firebird     19.2  175\n",
+       "Fiat X1-9            27.3   66\n",
+       "Porsche 914-2        26.0   91\n",
+       "Lotus Europa         30.4  113\n",
+       "Ford Pantera L       15.8  264\n",
+       "Ferrari Dino         19.7  175\n",
+       "Maserati Bora        15.0  335\n",
+       "Volvo 142E           21.4  109"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtcars.filter(items =['mpg','hp'])"
    ]
   },
   {
@@ -3581,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "5923e1c4-e73e-445f-8777-b1786f4dbb43",
    "metadata": {},
    "outputs": [
@@ -3638,7 +4042,7 @@
        "5     21.380000"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3650,7 +4054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "21441d01-cd01-4bc4-a9a2-35f7dd7da857",
    "metadata": {},
    "outputs": [
@@ -3707,7 +4111,7 @@
        "5     21.380000"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
