--- a/sql/sqlC3B_vsq.ipynb
+++ b/sql/sqlC3B_vsq.ipynb
@@ -108,7 +108,17 @@
     "## SUB-QUERIES\n",
     "### SQ1 - Students whose total score is above the overall average score\n",
     "- SELECT sname FROM student_scores GROUP BY sname HAVING SUM(score) > ( SELECT AVG(score) FROM student_scores)\n",
-    "- SELECT sname, SUM(score) FROM student_scores GROUP BY sname HAVING SUM(score) > ( SELECT AVG(score) FROM student_scores)"
+    "- SELECT sname, SUM(score) FROM student_scores GROUP BY sname HAVING SUM(score) > ( SELECT AVG(score) FROM student_scores)\n",
+    "### SQ2 - Students whose total score is above the overall average score\n",
+    "- SELECT sname FROM student_scores GROUP BY sname HAVING SUM(score) > ( SELECT AVG(score) FROM student_scores)\n",
+    "### SQ3 - Inline view: students with total score > 250\n",
+    "- SELECT * FROM ( SELECT sname, SUM(score) AS total_score FROM student_scores    GROUP BY sname) AS totals WHERE total_score > 250\n",
+    "### SQ4 - Subquery in SELECT: each exam with subject average\n",
+    "- SELECT s1.id,  s1.sname,  s1.subject,  s1.score, (  SELECT AVG(s2.score)FROM student_scores AS s2  WHERE s2.subject = s1.subject) AS avg_in_subject FROM student_scores AS s1 ORDER BY subject, score DESC\n",
+    "### SQ5 -  EXISTS: students who have at least one score above their subject's average\n",
+    "- SELECT DISTINCT s1.sname FROM student_scores AS s1 WHERE EXISTS (     SELECT 1    FROM student_scores AS s2    WHERE s2.subject = s1.subject    GROUP BY s2.subject HAVING MAX(s1.score) > AVG(s2.score) );\n",
+    "### SQ6 - Latest exam for each student\n",
+    "- SELECT * FROM student_scores AS s1 WHERE s1.examdate = ( SELECT MAX(s2.examdate) FROM student_scores AS s2 WHERE s2.sname = s1.sname ) ORDER BY sname, examdate;  "
    ]
   },
   {
@@ -116,82 +126,50 @@
    "id": "617fec2b-dc41-4fe2-afc0-ee1193c863f9",
    "metadata": {},
    "source": [
-    "\n",
-    "-- =========================================================\n",
-    "-- 2) Subqueries\n",
-    "-- =========================================================\n",
-    "\n",
-    "-- 2A) Students whose total score is above the overall average score\n",
-    "SELECT student_name\n",
-    "FROM student_scores\n",
-    "GROUP BY student_name\n",
-    "HAVING SUM(score) > (\n",
-    "    SELECT AVG(score) FROM student_scores\n",
-    ");\n",
-    "\n",
-    "-- 2B) Inline view: students with total score > 250\n",
-    "SELECT *\n",
-    "FROM (\n",
-    "    SELECT student_name, SUM(score) AS total_score\n",
-    "    FROM student_scores\n",
-    "    GROUP BY student_name\n",
-    ") AS totals\n",
-    "WHERE total_score > 250;\n",
-    "\n",
-    "-- 2C) Subquery in SELECT: each exam with subject average\n",
-    "SELECT\n",
-    "    s1.id,\n",
-    "    s1.student_name,\n",
-    "    s1.subject,\n",
-    "    s1.score,\n",
-    "    (\n",
-    "        SELECT AVG(s2.score)\n",
-    "        FROM student_scores AS s2\n",
-    "        WHERE s2.subject = s1.subject\n",
-    "    ) AS avg_in_subject\n",
-    "FROM student_scores AS s1\n",
-    "ORDER BY subject, score DESC;\n",
-    "\n",
-    "-- 2D) EXISTS: students who have at least one score above their subject's average\n",
-    "SELECT DISTINCT s1.student_name\n",
-    "FROM student_scores AS s1\n",
-    "WHERE EXISTS (\n",
-    "    SELECT 1\n",
-    "    FROM student_scores AS s2\n",
-    "    WHERE s2.subject = s1.subject\n",
-    "    GROUP BY s2.subject\n",
-    "    HAVING MAX(s1.score) > AVG(s2.score)\n",
-    ");\n",
-    "\n",
-    "-- 2E) Latest exam for each student\n",
-    "SELECT *\n",
-    "FROM student_scores AS s1\n",
-    "WHERE s1.exam_date = (\n",
-    "    SELECT MAX(s2.exam_date)\n",
-    "    FROM student_scores AS s2\n",
-    "    WHERE s2.student_name = s1.student_name\n",
-    ")\n",
-    "ORDER BY student_name, exam_date;\n",
-    "\n",
-    "\n",
-    "⸻\n",
-    "\n",
-    "How This Helps Students Understand\n",
-    "\t•\tViews now represent common classroom analytics:\n",
-    "\t•\tsubject_avg_scores: how each subject is performing overall\n",
-    "\t•\tstudent_totals: personal performance summaries\n",
-    "\t•\tmath_scores: focused subset of data\n",
-    "\t•\tSubqueries answer practical questions:\n",
-    "\t•\tWho’s above average overall?\n",
-    "\t•\tWhich students have exceptionally high totals?\n",
-    "\t•\tWhat’s the average in my subject compared to my score?\n",
-    "\t•\tWho has beaten their subject’s average?\n",
-    "\t•\tWhat’s my latest recorded exam score?\n",
-    "\n",
-    "⸻\n",
-    "\n",
-    "If you want, I can add window functions like RANK, DENSE_RANK, LEAD, and LAG to this same student_scores table so learners can see them alongside views and subqueries in one script. That way, it’s one comprehensive playground for SQL practice. Would you like me to do that?"
+    "#####"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec6adc5e-620a-4af9-bf2c-2b48b56520d6",
+   "metadata": {},
+   "source": [
+    "## WINDOWS functions\n",
+    "###  W1 - Rank within each subject by score (ties at same rank)\n",
+    "- SELECT   subject,  sname,  score,  RANK()       OVER (PARTITION BY subject ORDER BY score DESC)       AS subj_rank,  DENSE_RANK() OVER (PARTITION BY subject ORDER BY score DESC)       AS subj_dense_rank FROM student_scores ORDER BY subject, score DESC, sname;\n",
+    "### W2  - Overall ranking across all subjects (for a leaderboard view)\n",
+    "- SELECT   sname,  subject,  score,  RANK() OVER (ORDER BY score DESC) AS overall_rank,  DENSE_RANK() OVER (ORDER BY score DESC) AS overall_dense_rank\n",
+    "FROM student_scores ORDER BY score DESC, sname;\n",
+    "### W3 =  LAG/LEAD per student (chronological progression)\n",
+    "- Shows previous and next scores and the deltas (needs multiple rows per student; see optional inserts)\n",
+    "- SELECT   sname,  examdate,  subject,  score,\n",
+    "  LAG(score, 1)  OVER (PARTITION BY sname ORDER BY examdate)                AS prev_score,\n",
+    "  score - LAG(score, 1)  OVER (PARTITION BY sname ORDER BY examdate)        AS change_from_prev,\n",
+    "  LEAD(score, 1) OVER (PARTITION BY sname ORDER BY examdate)                AS next_score,\n",
+    "  LEAD(score, 1) OVER (PARTITION BY sname ORDER BY examdate) - score        AS change_to_next\n",
+    "FROM student_scores ORDER BY sname, examdate;\n",
+    "###  W4 - LAG within subject by score (who’s the next lower score in the same subject?)\n",
+    "- SELECT   subject,  sname,  score,  LAG(score) OVER (PARTITION BY subject ORDER BY score DESC) AS prev_higher_score,  score - LAG(score) OVER (PARTITION BY subject ORDER BY score DESC) AS gap_from_prev FROM student_scoresORDER BY subject, score DESC, sname\n",
+    "\n",
+    "### W5 - A tidy leaderboard combining subject rank + overall rank\n",
+    "- WITH ranked AS (   SELECT    id, sname, subject, examdate, score,  RANK() OVER (PARTITION BY subject ORDER BY score DESC) AS subj_rank,  RANK() OVER (ORDER BY score DESC)   AS overall_rank FROM student_scores ) SELECT * FROM ranked ORDER BY subject, subj_rank, sname, examdate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2951b67-8ca9-4948-8b83-2f72cbc6bfd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e82a8cfe-b1bd-4613-8b05-fd08553fc7ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
