--- a/sql/sqlC2_win.ipynb
+++ b/sql/sqlC2_win.ipynb
@@ -16,9 +16,10 @@
    "source": [
     "## Connect to MySQL\n",
     "- go terminal mode\n",
+    "- root/Mysql@123\n",
     "- mysql -u piuser - p\n",
     "- enter password (Pass#123)\n",
-    "- #user-piuser, pwd-Pass#123, yourdb - students\n",
+    "- #user-piuser, pwd-Pass#123, yourdb - piit\n",
     "- mysql\n",
     "    - show databases;\n",
     "    - use piit;\n",
