--- a/py/others/functions.ipynb
+++ b/py/others/functions.ipynb
@@ -252,9 +252,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c65afd4c-84e0-4af9-bb11-b159496deca9",
+   "metadata": {},
+   "source": [
+    "## End here"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c93a063-9bed-4c0a-aee3-07a4cd27cbb4",
+   "id": "2481eba0-66e7-4d39-9927-53f02b5046e6",
    "metadata": {},
    "outputs": [],
    "source": []
