--- a/py/pd/pd4Agg.ipynb
+++ b/py/pd/pd4Agg.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c057ab22-44be-40e1-87d6-779797e4b949",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "60ff3981-a6a1-4743-959e-cd9169590f4c",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d569abc0-558a-4783-a6ee-7b6e080283af",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "07aa7392-97db-458b-8147-39a7eb628ded",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Student_1</td>\n",
+       "      <td>Jugurtha</td>\n",
        "      <td>Male</td>\n",
        "      <td>2000-08-16</td>\n",
        "      <td>156</td>\n",
@@ -132,8 +132,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Student_2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Amandeep</td>\n",
+       "      <td>Female</td>\n",
        "      <td>2000-02-21</td>\n",
        "      <td>170</td>\n",
        "      <td>BBA</td>\n",
@@ -145,7 +145,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Student_3</td>\n",
+       "      <td>Barkat</td>\n",
        "      <td>Female</td>\n",
        "      <td>2001-07-17</td>\n",
        "      <td>158</td>\n",
@@ -158,7 +158,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Student_4</td>\n",
+       "      <td>Suroor</td>\n",
        "      <td>Female</td>\n",
        "      <td>2001-05-16</td>\n",
        "      <td>188</td>\n",
@@ -171,7 +171,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>Student_5</td>\n",
+       "      <td>Sultana</td>\n",
        "      <td>Male</td>\n",
        "      <td>2001-04-02</td>\n",
        "      <td>167</td>\n",
@@ -186,15 +186,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   rollno       name  gender         dob  height program  maths  english  stats  python\n",
-       "0       1  Student_1    Male  2000-08-16     156     BCA    NaN      NaN   63.0    40.0\n",
-       "1       2  Student_2     NaN  2000-02-21     170     BBA   83.0     47.0   63.0    50.0\n",
-       "2       3  Student_3  Female  2001-07-17     158     BCA   90.0     56.0   47.0    74.0\n",
-       "3       4  Student_4  Female  2001-05-16     188     BBA   74.0     72.0   98.0     NaN\n",
-       "4       5  Student_5    Male  2001-04-02     167     BCA   81.0     78.0    NaN    80.0"
+       "   rollno      name  gender         dob  height program  maths  english  stats  python\n",
+       "0       1  Jugurtha    Male  2000-08-16     156     BCA    NaN      NaN   63.0    40.0\n",
+       "1       2  Amandeep  Female  2000-02-21     170     BBA   83.0     47.0   63.0    50.0\n",
+       "2       3    Barkat  Female  2001-07-17     158     BCA   90.0     56.0   47.0    74.0\n",
+       "3       4    Suroor  Female  2001-05-16     188     BBA   74.0     72.0   98.0     NaN\n",
+       "4       5   Sultana    Male  2001-04-02     167     BCA   81.0     78.0    NaN    80.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "914fe7c0-24fe-4b1c-9a9a-36f83cae67d0",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d3d9733e-20d5-485f-93bf-9051308333c1",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "BCA      76.666667     68.5  64.166667  61.928571"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a28228fa-ed1c-471b-b14e-a371f11efa84",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "      <td>99.0</td>\n",
        "      <td>96.0</td>\n",
        "      <td>98.0</td>\n",
-       "      <td>97.0</td>\n",
+       "      <td>94.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -354,10 +354,10 @@
        "        maths  english  stats  python\n",
        "gender                               \n",
        "Female   94.0     83.0   98.0    81.0\n",
-       "Male     99.0     96.0   98.0    97.0"
+       "Male     99.0     96.0   98.0    94.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b4471584-523f-4145-b464-5dee0eebcd54",
    "metadata": {},
    "outputs": [],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5069dfd5-6d34-4ddf-9f55-ec25de30a140",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4a21c5b6-0ac3-441b-9b26-df90c3f3bb2f",
    "metadata": {},
    "outputs": [
@@ -677,19 +677,19 @@
        "      <th>0</th>\n",
        "      <td>BBA</td>\n",
        "      <td>Female</td>\n",
-       "      <td>77.00</td>\n",
-       "      <td>64.67</td>\n",
-       "      <td>87.25</td>\n",
-       "      <td>64.80</td>\n",
+       "      <td>78.20</td>\n",
+       "      <td>65.83</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>61.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BBA</td>\n",
        "      <td>Male</td>\n",
-       "      <td>71.25</td>\n",
-       "      <td>64.86</td>\n",
-       "      <td>69.86</td>\n",
-       "      <td>82.00</td>\n",
+       "      <td>68.88</td>\n",
+       "      <td>61.29</td>\n",
+       "      <td>72.00</td>\n",
+       "      <td>81.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -715,13 +715,13 @@
       ],
       "text/plain": [
        "  program  gender  maths  english  stats  python\n",
-       "0     BBA  Female  77.00    64.67  87.25   64.80\n",
-       "1     BBA    Male  71.25    64.86  69.86   82.00\n",
+       "0     BBA  Female  78.20    65.83  79.00   61.60\n",
+       "1     BBA    Male  68.88    61.29  72.00   81.57\n",
        "2     BCA  Female  72.80    69.17  56.83   67.83\n",
        "3     BCA    Male  79.43    67.83  71.50   57.50"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1745,6 +1745,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d9d07347-8d7f-4f46-aeee-d9559373cde0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f74ea7a0-de42-4b8b-b30f-474d28156bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd56417-a40d-4424-8b75-183a6cbafefa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca508d9d-a0a3-4eb8-bbef-48a2333175f2",
+   "metadata": {},
+   "source": [
+    "## End here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17e8cdab-cc42-427c-ae54-90d163a1b9cf",
    "metadata": {},
    "outputs": [],
    "source": []
