--- a/py/graphs/graphPD.ipynb
+++ b/py/graphs/graphPD.ipynb
@@ -177,7 +177,9 @@
    "id": "dce7fa71-5ef8-4fe9-9c20-da431d40f7e0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pl practise from the link provided above"
+   ]
   }
  ],
  "metadata": {
