--- a/py/graphs/graphMPL.ipynb
+++ b/py/graphs/graphMPL.ipynb
@@ -165,13 +165,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dce7fa71-5ef8-4fe9-9c20-da431d40f7e0",
+   "cell_type": "markdown",
+   "id": "7f2bdb2a-0d01-41d3-9fce-cdff567493e3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://www.google.com/url?sa=i&url=https%3A%2F%2Fpython-graph-gallery.com%2Fcheat-sheets%2F&psig=AOvVaw01c5IQdyR_Onc4jvLtV6SA&ust=1755514292202000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCICDhcDWkY8DFQAAAAAdAAAAABAi"
+    "# Links\n",
+    "- https://www.google.com/url?sa=i&url=https%3A%2F%2Fpython-graph-gallery.com%2Fcheat-sheets%2F&psig=AOvVaw01c5IQdyR_Onc4jvLtV6SA&ust=1755514292202000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCICDhcDWkY8DFQAAAAAdAAAAABAi\n",
+    "- "
    ]
   }
  ],
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
