--- a/sql/sql_pandas.ipynb
+++ b/sql/sql_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "048719b8-9d62-4e2d-94ad-437c302a9f15",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8a1e6fc1-cf8e-4ce0-a03c-e71b093ceef2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6438d037-cd73-4176-838e-e7ffc1429e9d",
    "metadata": {},
    "outputs": [],
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c03adc17-47bf-4bf1-9a02-b4463290fba1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sqlpractise1.xlsx', '~$sqlpractise1.xlsx']"
+       "['sqlpractise1.xlsx', '.DS_Store', 'student160825.csv', '.ipynb_checkpoints']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "77eb97cd-2f4f-49b4-9dac-27b06d1c043a",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a53b1633-a875-4448-994d-12dc105f80b6",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "4       5        Eva    Taylor      102   65000          1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "81a5f6a0-cd67-4bab-aa8e-52cc85b5df9a",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "2      103    Marketing           4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "c85cc636-c7bf-429a-a76c-6e80817ece84",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "21745f9b-b5db-40a3-92ed-9e7b493ffd34",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "4       5        Eva    Taylor      102   65000          1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "b6a285c7-c407-49a5-8aac-20b0a4e71948",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "2       5        Eva    Taylor      102   65000          1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "4a4dad49-01ae-4324-a709-6031717a1d02",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "4        Eva    Taylor  Engineering"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "69f80b81-20e0-4c7d-8d16-c84db6d6299e",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "2    Marketing               1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "276ca38f-a718-417f-b6ad-5acda5988ed3",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
        "0       3    Charlie     Brown      101   55000          0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
