--- a/sql/sql-python1.ipynb
+++ b/sql/sql-python1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "e161a477-9143-44c5-a8b4-4e73440869c9",
    "metadata": {},
    "outputs": [],
@@ -54,30 +54,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f2e64ec8-1cff-4213-882c-8fbda8870c2e",
+   "execution_count": 8,
+   "id": "c44022d0-d19a-4197-b23d-94ac59b8dbd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Engine(mysql+pymysql://piuser:***@localhost:3306/piit)"
+       "Engine(mysql+pymysql://piuser:***@123@localhost:3306/piit)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# URL-encode special chars in password if any (e.g., # -> %23, @ -> %40)\n",
-    "engine1 = create_engine(\"mysql+pymysql://piuser:Pass%40123@localhost:3306/piit\")\n",
-    "engine1"
+    "#engine1 = create_engine(\"mysql+pymysql://piuser:Pass@123@localhost:3306/piit\")\n",
+    "#engine1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "id": "f2e64ec8-1cff-4213-882c-8fbda8870c2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engine(mysql+pymysql://piuser:***@localhost:3306/piit)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# URL-encode special chars in password if any (e.g., # -> %23, @ -> %40)  #Pass@123 - Pass%40123\n",
+    "engine1 = create_engine(\"mysql+pymysql://piuser:Pass%40123@localhost:3306/piit\")\n",
+    "print(engine1)\n",
+    "#setting up connection mysql with user name - piuser, pwd - Pass@123 and to database piit at port no  3306"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "7437ba27-8a9d-42d2-8f7f-71cf438c5e75",
    "metadata": {},
    "outputs": [],
@@ -90,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "852fa0c9-e11c-4e54-b894-7078fae29bf6",
    "metadata": {},
    "outputs": [
@@ -120,7 +140,6 @@
        "      <th>last_name</th>\n",
        "      <th>department</th>\n",
        "      <th>salary</th>\n",
-       "      <th>new_column</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -130,8 +149,7 @@
        "      <td>John</td>\n",
        "      <td>Doe</td>\n",
        "      <td>HR</td>\n",
-       "      <td>55000.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>50000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -140,7 +158,6 @@
        "      <td>Smith</td>\n",
        "      <td>IT</td>\n",
        "      <td>60000.0</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -149,7 +166,6 @@
        "      <td>Johnson</td>\n",
        "      <td>Finance</td>\n",
        "      <td>55000.0</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -158,21 +174,74 @@
        "      <td>Williams</td>\n",
        "      <td>IT</td>\n",
        "      <td>62000.0</td>\n",
-       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Emily</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>48000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>101</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>60000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>55000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>104</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>62000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Emily</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>48000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   employee_id first_name last_name department   salary new_column\n",
-       "0            1       John       Doe         HR  55000.0       None\n",
-       "1            2       Jane     Smith         IT  60000.0       None\n",
-       "2            3      Alice   Johnson    Finance  55000.0       None\n",
-       "3            4        Bob  Williams         IT  62000.0       None"
+       "   employee_id first_name last_name department   salary\n",
+       "0            1       John       Doe         HR  50000.0\n",
+       "1            2       Jane     Smith         IT  60000.0\n",
+       "2            3      Alice   Johnson    Finance  55000.0\n",
+       "3            4        Bob  Williams         IT  62000.0\n",
+       "4            5      Emily     Brown         HR  48000.0\n",
+       "5          101       John       Doe         HR  50000.0\n",
+       "6          102       Jane     Smith         IT  60000.0\n",
+       "7          103      Alice   Johnson    Finance  55000.0\n",
+       "8          104        Bob  Williams         IT  62000.0\n",
+       "9          105      Emily     Brown         HR  48000.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "4e2ef70f-174d-4d3f-a3e4-52444b984c66",
    "metadata": {},
    "outputs": [
@@ -222,7 +291,6 @@
        "      <th>last_name</th>\n",
        "      <th>department</th>\n",
        "      <th>salary</th>\n",
-       "      <th>new_column</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -233,7 +301,6 @@
        "      <td>Smith</td>\n",
        "      <td>IT</td>\n",
        "      <td>60000.0</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -242,19 +309,36 @@
        "      <td>Williams</td>\n",
        "      <td>IT</td>\n",
        "      <td>62000.0</td>\n",
-       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>60000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>62000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   employee_id first_name last_name department   salary new_column\n",
-       "0            2       Jane     Smith         IT  60000.0       None\n",
-       "1            4        Bob  Williams         IT  62000.0       None"
+       "   employee_id first_name last_name department   salary\n",
+       "0            2       Jane     Smith         IT  60000.0\n",
+       "1            4        Bob  Williams         IT  62000.0\n",
+       "2          102       Jane     Smith         IT  60000.0\n",
+       "3          104        Bob  Williams         IT  62000.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
