--- a/sql/sql-python1.ipynb
+++ b/sql/sql-python1.ipynb
@@ -41,6 +41,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "22bf4cb2-1b7c-4a90-aa6d-1c829c32ee96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install sqlalchemy\n",
+    "#pip install pymysql"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "e161a477-9143-44c5-a8b4-4e73440869c9",
    "metadata": {},
